# klipper

./: .config.bed  .config.mcu  .config.noz  .config_g030  .gitignore  Makefile  README.md
docs/: Config_Reference.md  G-Codes.md  Load_Cell.md  Load_Cell_Probe.md
klippy/: pyproject.toml  stepper.py
klippy/chelper/: Makefile
klippy/extras/: bulk_sensor_adc.py  hx71x.py  load_cell.py  load_cell_probe.py  probe.py  simple_tap_classifier.py  sos_filter.py  tap_recorder.py
scripts/: klippy-requirements.txt
src/: Kconfig  Makefile  load_cell_probe.c  sensor_hx71x.c
src/gd32/: Kconfig  Makefile  gd32e23x.c  gd32f30x.c
src/generic/: armcm_boot.c
src/stm32/: Kconfig  hard_pwm.c  stm32g0.c
tool/: falsh_k1.sh
